<resources>
    <string name="app_name">An_Le_Thanh News Api Demo</string>
    <string name="apiKey">ff74d78dab9c4ac3944e4c4ba1e5219c</string>
    <string name="headlines">Headlines</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="visit_site">Visit site</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="fullname">Fullname</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_out">Sign out</string>
    <string name="address">Address</string>
    <string name="you_don_t_have_account_register_now">You don\'t have an account. Register now</string>
</resources>
